<resources>
    <string name="app_name">Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt001">This is %s application</string>
    <string name="txt002">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_slideshow_request">Request…</string>
    <string name="menu_error">Error</string>
    <string name="txt004">Exit</string>
    <string name="txt005">more</string>
    <string name="txt006">Nothing to show</string>
    <string name="menu_empty">Empty response</string>
</resources>
