<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.ErrorFragment"
    android:orientation="vertical"
    android:gravity="center|top">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/menu_home"
        android:textAllCaps="false"
        android:id="@+id/id002"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/txt004"
        android:textAllCaps="false"
        android:id="@+id/id003"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt005"
        android:textAllCaps="false"
        android:id="@+id/id004"/>

</LinearLayout>